# photoprysm

./: .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  requirements_dev.txt  tox.ini
docs/: Makefile  api.rst  conf.py  index.rst  installation.rst  make.bat  requirements.txt  usage.rst
src/photoprysm/: __init__.py  __main__.py  albums.py  cli.py  core.py  photos.py
src/photoprysm/api/: albums.py  photos.py
src/photoprysm/models/: albums.py  base.py  links.py  photos.py
tests/: __init__.py  conftest.py  test_albums.py  test_core.py  test_photoprysm.py  test_photos.py
tests/mock_responses/: get_photos_count1_quality0.json  loader.py
tests/mock_responses/album/: body_00.json  body_01.json  body_02.json  body_03.json  headers.txt  headers_list.txt  request_create.txt  request_delete.txt  request_get_albums_1.txt  request_get_albums_3.txt  request_get_by_uid.txt  request_rename.txt
tests/mock_responses/file/: body_00.json  headers.txt  request.txt
tests/mock_responses/i18n_response/: body.json  headers.txt  request_like_album.txt
tests/mock_responses/photo/: body_00.json  body_01.json  body_02.json  body_03.json  headers.txt  headers_list.txt  request_get_by_uid.txt  request_get_photos_3.txt
tests/mock_responses/subject/: body.json
tests/mock_responses/user_session/: body.json  headers.txt  request.txt
