[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photoprysm"
version = "0.0.1"
description = "A Python client for interacting the the Photoprism REST API."
readme = "README.rst"
authors = [
  {name = "Rice Rodriguez", email = "victoriarice@protonmail.com"}
]
maintainers = [
  {name = "Rice Rodriguez", email = "victoriarice@protonmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
    "responses"
]

[project.urls]

bugs = "https://github.com/ricerodriguez/photoprysm/issues"
changelog = "https://github.com/ricerodriguez/photoprysm/blob/master/changelog.md"
homepage = "https://github.com/ricerodriguez/photoprysm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

