[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "photoprysm"
version = "0.0.3"
description = "A Python client for interacting the the Photoprism REST API."
readme = "README.rst"
authors = [
  {name = "Rice Rodriguez", email = "victoriarice@protonmail.com"}
]
maintainers = [
  {name = "Rice Rodriguez", email = "victoriarice@protonmail.com"}
]
classifiers = [

]
license = {text = "GNU General Public License v3"}
dependencies = [
  "requests>=2.32.3"
]

[project.optional-dependencies]
dev = [
    "pytest",  # testing
    "responses"
]
doc = [
    "sphinx",
    "sphinx_autodoc_typehints"
]    

[project.urls]

bugs = "https://github.com/ricerodriguez/photoprysm/issues"
changelog = "https://github.com/ricerodriguez/photoprysm/blob/master/changelog.md"
homepage = "https://github.com/ricerodriguez/photoprysm"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]
